--- a/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Department/Create.cshtml
+++ b/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Department/Create.cshtml
@@ -31,3 +31,7 @@
 
 </form>
 
+@section validationSection{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
