--- a/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Shared/_Layout.cshtml
+++ b/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Depratment</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -47,6 +50,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @await RenderSectionAsync("validationSection", required: false)
 </body>
 </html>
