--- a/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Employee/Delete.cshtml
+++ b/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Employee/Delete.cshtml
@@ -11,38 +11,8 @@
 
 <form asp-action="Delete">
     <div asp-validation-summary="All"></div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Age"></label>
-        <input asp-for="Age" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Address"></label>
-        <input asp-for="Address" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="Salary"></label>
-        <input asp-for="Salary" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="IsActive"></label>
-        <input asp-for="IsActive" class="form-control" disabled />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="PhoneNumber"></label>
-        <input asp-for="PhoneNumber" class="form-control" readonly />
-    </div>
-    <div class="form-group">
-        <label class="col-form-label" asp-for="HireDate"></label>
-        <input asp-for="HireDate" class="form-control" readonly />
-    </div>
+
+    <partial name="PartialViews/_DeleteDetailsPartial" model="@Model" />
     <input type="submit" value="Delete" class="btn btn-danger"> |
     <a class="btn btn-dark" asp-action="Index">Cancel</a>
 </form>
