--- a/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Employee/Index.cshtml
+++ b/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/Employee/Index.cshtml
@@ -11,6 +11,17 @@
 <br />
 <hr />
 
+@if (!string.IsNullOrEmpty(ViewBag.Msg))
+{
+    <div class="alert alert-danger">@ViewBag.Msg</div>
+}
+
+@if (!string.IsNullOrEmpty(TempData["curruntAction"] as string))
+{
+    <div class="alert alert-success">@TempData["curruntAction"]</div>
+}
+
+
 <a asp-action="Create" class="btn btn-primary p-1">
     Create Employee
 </a>
@@ -26,6 +37,7 @@
                 <th>@Html.DisplayNameFor(e=>e.Address)</th>
                 <th>@Html.DisplayNameFor(e=>e.Email)</th>
                 <th>@Html.DisplayNameFor(e=>e.Salary)</th>
+                <th>@Html.DisplayNameFor(e=>e.Department)</th>
                 <th>@Html.DisplayNameFor(e=>e.IsActive)</th>
                 <th>@Html.DisplayNameFor(e=>e.PhoneNumber)</th>
                 <th>@Html.DisplayNameFor(e=>e.HireDate)</th>
@@ -43,24 +55,12 @@
                     <td>@e.Address</td>
                     <td>@e.Email</td>
                     <td>@e.Salary</td>
+                    <td>@e.Department?.Name</td>
                     <td>@e.IsActive</td>
                     <td>@e.PhoneNumber</td>
                     <td>@e.HireDate</td>
-                    <td>
-                        <a asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Update" asp-route-id="@e.Id" class="btn btn-success">
-                            <i class="fas fa-edit"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Delete" asp-route-id="@e.Id" class="btn btn-danger">
-                            <i class="fas fa-trash"></i> Delete
-                        </a>
-                    </td>
+                    <partial name="_ButtonsPartial" model="@e.Id" />
+
                 </tr>
             }
         </tbody>
