--- a/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/_ViewImports.cshtml
+++ b/ASP.NET_Core/Asp.netCore03.solution/Demo.PL/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Demo.PL
 @using Demo.PL.ViewModels
 @using Demo.DAL.Models
+@using Demo.BLL.Interfaces
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
